fixed table space

--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
                         <tr>
                           <td style="padding: 6px">
                             <a href="https://www.linkedin.com/in/lucile-vacqui%C3%A929/"> 
-                               <img style="width: 14px;" src="./linkedin.png" /> 
+                               <img style="width: 14px;" src="https://files.bob-hall.com/linkedin.png" /> 
                             </a>
                           </td>
                           <td style="padding: 6px">
                             <a href="https://www.instagram.com/lucile_vcq/"> 
-                               <img style="width: 14px;" src="./instagram.png" /> 
+                               <img style="width: 14px;" src="https://files.bob-hall.com/instagram.png" /> 
                             </a>
                           </td>
                           <td style="padding: 6px">
                             <a href="https://github.com/lucilevacquie"> 
-                               <img style="width: 14px;" src="./github.png" /> 
+                               <img style="width: 14px;" src="https://files.bob-hall.com/github.png" /> 
                             </a>
                           </td>
                         </tr>
@@ -201,7 +201,7 @@
                       padding-left: 17px;
                     "
                   >
-                    <img style="width: 120px;" src="./profile.jpg" />
+                    <img style="width: 120px;display: block;" src="https://files.bob-hall.com/profile.jpg" />
                   </td>
                   <td style="width: 75px"></td>
                 </tr>
@@ -243,7 +243,7 @@
                                       padding: 8px 0 6px 0;
                                     "
                                   >
-                                    <img style="width: 16px;" src="./phone.png" />
+                                    <img style="width: 16px;" src="https://files.bob-hall.com/phone.png" />
                                   </td>
                                   <td
                                     style="
@@ -253,7 +253,7 @@
                                       padding: 8px 0 6px 8px;
                                     "
                                   >
-                                    +44 (0)7584982399
+                                    +44 (0)7584 982399
                                   </td>
                                   <td></td>
                                 </tr>
@@ -264,7 +264,7 @@
                                       border-bottom: 1px solid #edeef1;
                                     "
                                   >
-                                    <img style="width: 16px;" src="./email.png" />
+                                    <img style="width: 16px;" src="https://files.bob-hall.com/email.png" />
                                   </td>
                                   <td
                                     style="
@@ -282,7 +282,7 @@
                                       border-bottom: 1px solid #edeef1;
                                     "
                                   >
-                                    <img style="width: 16px;" src="./web.png" />
+                                    <img style="width: 16px;" src="https://files.bob-hall.com/web.png" />
                                   </td>
                                   <td
                                     style="
@@ -300,7 +300,7 @@
                                       border-bottom: 0px solid #edeef1;
                                     "
                                   >
-                                    <img style="width: 16px;" src="./location.png" />
+                                    <img style="width: 16px;" src="https://files.bob-hall.com/location.png" />
                                   </td>
                                   <td
                                     style="
@@ -309,7 +309,7 @@
                                       border-bottom: 0px solid #edeef1;
                                     "
                                   >
-                                    Sheffield
+                                    Sheffield, UK
                                   </td>
                                 </tr>
                               </tbody>
