--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
       margin: 0;
       padding: 0;
       -webkit-text-size-adjust: 100%;
-      background-color: #d1d5dd;
     "
   >
     <table
@@ -103,7 +102,7 @@
         mso-table-rspace: 0pt;
         vertical-align: top;
         min-width: 320px;
-        background-color: #ffffff;
+        background-color: none;
         width: 100%;
         color: #344157;
       "
@@ -120,7 +119,7 @@
               color: #fff;
             "
           >
-            <table style="margin: 0; padding: 0">
+            <table style="margin: 0; padding: 0; border-spacing: 0;">
               <tbody>
                 <tr>
                   <td
@@ -151,7 +150,7 @@
                         </tr>
                         <tr>
                           <td style="padding-left: 14px; padding-top: 4px">
-                            <div style="font-size: 13px; color: #fff">
+                            <div style="font-size: 13px; color: #fff; font-family: 'Poppins', sans-serif;">
                               Front End Developer
                             </div>
                           </td>
@@ -188,8 +187,8 @@
               </tbody>
             </table>
           </td>
-          <td style="height: 100%; width: 150px; background-color: #fff">
-            <table style="height: 100%;">
+          <td style="height: 100%; width: 150px; background-color: none;">
+            <table style="height: 100%; border-spacing: 0;">
               <tbody>
                 <tr>
                   <td
@@ -251,6 +250,7 @@
                                       width: 100px;
                                       border-bottom: 1px solid #edeef1;
                                       padding: 8px 0 6px 8px;
+                                      font-family: 'Poppins', sans-serif;
                                     "
                                   >
                                     +44 (0)7584 982399
@@ -270,6 +270,7 @@
                                     style="
                                       padding: 8px 0 6px 8px;
                                       border-bottom: 1px solid #edeef1;
+                                      font-family: 'Poppins', sans-serif;
                                     "
                                   >
                                     <a href="mailto:lucile.vacquie@gmail.com"> lucile.vacquie@gmail.com </a>
@@ -288,6 +289,7 @@
                                     style="
                                       padding: 8px 0 6px 8px;
                                       border-bottom: 1px solid #edeef1;
+                                      font-family: 'Poppins', sans-serif;
                                     "
                                   >
                                     <a href="https://lucilevacquie.com/"> lucilevacquie.com </a>
@@ -307,6 +309,7 @@
                                       padding: 10px 0 8px 8px;
                                       line-height: 1.35;
                                       border-bottom: 0px solid #edeef1;
+                                      font-family: 'Poppins', sans-serif;
                                     "
                                   >
                                     Sheffield, UK
